feat: add google oauth, refactor user model

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,12 @@
 GIN_MODE=release
+
 CLIENT_ID=github_client_id
 CLIENT_SECRET=github_client_secret
+
+GOOGLE_CLIENT_ID=xxxxxxxx
+GOOGLE_CLIENT_SECRET=xxxxxxxx
+
 SESSION_SECRET=xxxxxxxxxxxxxxxxxxx
 MONGODB_URL=mongodb+srv://xxxxxxx:xxxxxxx@xx.net
-ALLOW_ORIGIN=http://localhost:8081
-REDIRECT_DOMAIN=http://localhost:8081
-LOGIN_URL=https://github.com/login/oauth/authorize?client_id=github_client_id&redirect_uri=http://localhost:7001/oauth/redirect
+FRONTEND_URL=http://localhost:5174
+BACKEND_URL=http://localhost:7001
